--- a/readme
+++ b/readme
@@ -1,1 +1,6 @@
-# my name is Joseph Roberts, I'm 19 years old, And I like playing video games.
+- Joseph Roberts
+- age:19
+- Hobbies
+* Video Games
+* Skateboarding
+* Guitar
